--- a/frame/src/App.css
+++ b/frame/src/App.css
@@ -26,3 +26,18 @@
   from { transform: rotate(0deg); }
   to { transform: rotate(360deg); }
 }
+
+.calendar-container {
+  margin: 0 auto;
+  padding: 20px ;
+  max-width: 1000px;
+}
+
+.calendar-header {
+  padding: 20px 20px 60px 20px
+}
+
+a {
+  text-decoration: none;
+  color: #009bff;
+}
