--- a/frame/src/App.css
+++ b/frame/src/App.css
@@ -34,10 +34,28 @@
 }
 
 .calendar-header {
-  padding: 20px 20px 60px 20px
+  padding: 20px 20px 60px 20px;
+  text-align: center
 }
 
-a {
+.options{
+  text-align: right;
+  position: relative;
+  top: 32px;
+  right: 170px
+}
+button {
   text-decoration: none;
-  color: #009bff;
+  font-size: 16px;
+  padding: 3px 10px;
+  margin: 0px 25px
+}
+
+.ReactModal__Overlay--after-open{
+  z-index: 500;
+
+}
+input{
+  display: block;
+  margin: 5px 0px
 }
